# automata_lab2

./: .gitignore  CMakeLists.txt  lab2_task.txt  main.cpp
nfa/: nfa.cpp  nfa.hpp  nfadot.cpp  nfadot.hpp
tree/: ast.hpp  parser.cpp  parser.hpp  treedot.cpp  treedot.hpp
